# m2cpp_tools

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/m2cpp/: utils.hpp
matlab_src/: load_binary_mat.m  load_binary_vec.m  main.m  save_binary.m
src/: main.cpp
